# iabank

./: .coverage  .coveragerc  .docker-compose.yml  .dockerignore  .env.example  .eslintignore  .gitignore  .npmignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .semgrepignore  .spectral.yaml  .terraformignore  .tool-versions  AGENTS.md  BLUEPRINT_ARQUITETURAL_FINAL.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CYPRESS_E2E_SETUP.md  GIT-GUIA.md  GUIA_COMPLETO_SISTEMA_AGV.md  IMPLEMENTATION_T071-T078_CRITICAL_FINAL.md  IMPLEMENTATION_T079-T085_BLUEPRINT_GAPS_FINAL.md  IMPLEMENTATION_T086_DR_PILOT_LIGHT_FINAL.md  LICENSE  MELHORIAS_ARQUITETURAIS.md  Makefile  PASSO_A_PASSO_POS_F10.md  PLANO_VALIDACAO_002-f-10-fundacao_v2.md  Prompt_Contexto_para_POS_Scaffolding_v1.0.md  Prompt_Contexto_para_Scaffolding(Alvo 0)_v1.0.md  README.md  RELATORIO_DRIFT_POETRY.md  RELATORIO_ETAPA_1.md  RELATORIO_ETAPA_2.md  RELATORIO_ETAPA_3.md  RELATORIO_EXECUCAO_TESTES.md  RELATORIO_ISSUE_181_MIGRACAO_OPENAPI31_OASDIFF.md  (+36 more)
agv-system/: AGV_SUBAGENTS_CONFIGURACOES_COMPLETAS.md  AGV_v5.0_SETUP_COMPLETO.md  BLUEPRINT_ARQUITETURAL.md  GUIA_COMPLETO_SISTEMA_AGV.md  MELHORIAS_ARQUITETURAIS.md  Ordem_Implementacao.md  pyproject.toml  setup_agv.py  validation_config.yaml
agv-system/Docs/Arquivo/: Prompt_F1_Tocrisna_Architecture_v7.4_PREENCHIDO.md  Prompt_F2_Orchestrator_v4.1.md
agv-system/Docs/Prompts/Injected/: Prompt_F4_Implementador_Mestre_v8.2.md  Prompt_F5.1_Transformador_Testes_UAT_F5_Para_Backend_Auto_v1.1.md  Prompt_F5_Gerador_Testes_Manuais_UAT_v1.4.md  Prompt_F7_Evolucionista_v1.2.md
agv-system/diagramas/: README.md  arquitetura-completa.md  fluxo-geradores.md  sequencia-execucao.md
agv-system/scripts/: agv-blueprint  agv-context  agv-quality  agv-setup  agv-validate
agv-system/slash-commands/agv/: context.md  implement.md  scaffold.md  status.md  test-integration.md  validate.md
agv-system/src/agv_system/: __init__.py  agv_context_extractor.py  inject_focused_context.py  post_scaffold_validation.py  setup_validation_profiles.py  validate_blueprint_conformity.py  validation_config.py  validator_generator.py
agv-system/src/agv_system/core/: __init__.py  base_generator.py  blueprint_parser.py  exceptions.py  logging_config.py
agv-system/src/agv_system/generators/: evolution_generator.py  integration_generator.py  scaffold_generator.py  scaffold_generator.py.backup
backend/: .ci-validate.txt  .env.example  Dockerfile  Makefile  README.ci-validate-20251111165152.md  README.md  SETUP-POSTGRES.md  TEST_RUNDOWN.md  __init__.py  celery.py  db.sqlite3  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test_change.py
backend/apps/: __init__.py
backend/apps/banking/: apps.py  models.py  serializers.py
backend/apps/banking/migrations/: 0001_initial.py  0002_alter_accountcategory_managers_and_more.py
backend/apps/banking/services/: __init__.py  financial_calculations.py
backend/apps/banking/tests/: factories.py  test_factories_contracts.py  test_factories_extras.py  test_factories_pii.py  test_financial_calculations_edge_cases.py  test_models.py
backend/apps/contracts/: __init__.py  admin.py  apps.py  models.py  signals.py
backend/apps/contracts/migrations/: 0001_initial.py  0002_add_redocly_tool_choice.py  0002_alter_contractdiffreport_tool_add_oasdiff.py  __init__.py
backend/apps/contracts/tests/: __init__.py  test_contracts_signals.py
backend/apps/foundation/: __init__.py  apps.py  idempotency.py  managers.py  metrics.py
backend/apps/foundation/api/: __init__.py  urls.py  views.py
backend/apps/foundation/middleware/: security.py
backend/apps/foundation/migrations/: 0001_initial.py  0002_frontend_foundation_backfill.py  0003_design_system_story.py  0004_feature_template_metric.py
backend/apps/foundation/models/: __init__.py  design_system_story.py  feature_template_metric.py  feature_template_registration.py
backend/apps/foundation/serializers/: __init__.py  design_system_story.py  feature_template.py  metrics.py  theme.py
backend/apps/foundation/services/: flag_gate.py  scaffold_registrar.py  seed_utils.py
backend/apps/foundation/tests/: test_csp_middleware.py  test_design_system_story_model.py  test_design_system_story_serializer.py  test_flag_gate.py  test_get_tenant_theme.py  test_list_design_system_stories_api.py  test_list_tenant_success_metrics_api.py  (+4 more)
backend/apps/tenancy/: __init__.py  apps.py  feature_flags.py  fields.py  managers.py  tasks.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  dbrouter.py  feature_flags.py  logging_utils.py  sentry.py  settings.py  urls.py  wsgi.py
backend/config/tests/: __init__.py  test_logging_utils.py  test_sentry_config.py
backend/scripts/: lint.py  quality.bat  test-setup.bat
backend/scripts/backup/: backup_database.sh  failover.sh  restore_database.sh
backend/scripts/postgres/: init-primary.sql  pg_hba.conf  postgresql.conf  recovery.conf  setup-replication.sh
backend/scripts/sql/: 01-init-extensions.sql  02-enable-rls.sql  03-configure-pitr.sql
backend/src/: .coveragerc  conftest.py  db.sqlite3  manage.py  pytest.ini
backend/src/config/: celery.py  settings.py  urls.py
backend/src/iabank/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/src/tests/: __init__.py
backend/tests/: conftest.py  test_ci.py  test_ci2.py
backend/tests/contract/: test_auth_login.py  test_customers_get.py  test_customers_post.py  test_installments_get.py  test_loans_post.py  test_payments_post.py  test_reports_dashboard.py
backend/tests/integration/: test_admin_multi_tenant.py  test_auth_flow.py  test_celery_tasks.py  test_compliance_audit.py  test_customer_management.py  test_loan_creation.py  test_payment_processing.py  test_reports_flow.py  test_settings_security.py  test_tenant_isolation.py
backend/tests/unit/: test_core_base_tenant_model.py  test_core_logging.py  test_core_tenant_middleware.py  test_core_tenant_model.py  test_customers_domain_services.py  test_finance_models.py  test_users_domain_services.py
iabank/backend/: Dockerfile  manage.py  pyproject.toml
(+807 files in other folders)
