[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "iabank"
version = "1.1.0"
description = "IABANK - Plataforma SaaS multi-tenant para gestão de empréstimos"
authors = ["IABANK Team <team@iabank.com>"]
readme = "README.md"
packages = [{include = "iabank", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Django Core
Django = "^4.2,<5.0"
djangorestframework = "^3.14,<4.0"
django-cors-headers = "^4.3,<5.0"
django-filter = "^23.5,<24.0"
# Database
psycopg2-binary = "^2.9,<3.0"
redis = "^5.0,<6.0"
# Async Processing
celery = "^5.3,<6.0"
django-celery-beat = "^2.5,<3.0"
django-celery-results = "^2.5,<3.0"
# Authentication & Security
djangorestframework-simplejwt = "^5.3,<6.0"
cryptography = "^41.0,<42.0"
argon2-cffi = "^23.1,<24.0"
# Multi-tenancy & Auditing
django-simple-history = "^3.4,<4.0"
# Logging & Monitoring
structlog = "^23.2,<24.0"
django-prometheus = "^2.3,<3.0"
# Environment Management
python-decouple = "^3.8,<4.0"
python-dotenv = "^1.0,<2.0"
# Validation & Serialization
pydantic = "^2.5,<3.0"
pydantic-settings = "^2.1,<3.0"
# Utils
python-dateutil = "^2.8,<3.0"
phonenumbers = "^8.13,<9.0"
validate-docbr = "^1.10,<2.0"
# Production
gunicorn = "^21.2,<22.0"
whitenoise = "^6.6,<7.0"

[tool.poetry.group.dev.dependencies]
# Development & Testing
pytest = "^7.4,<8.0"
pytest-django = "^4.7,<5.0"
pytest-cov = "^4.1,<5.0"
factory-boy = "^3.3,<4.0"
Faker = "^20.1,<21.0"
# Code Quality
ruff = "^0.1,<1.0"
black = "^23.12,<24.0"
mypy = "^1.7,<2.0"
django-stubs = "^4.2,<5.0"
djangorestframework-stubs = "^3.14,<4.0"
# Security Analysis (T080)
bandit = "^1.8,<2.0"
bandit-sarif-formatter = "^1.1,<2.0"
pip-audit = "^2.9,<3.0"

[tool.ruff]
# Configuração do ruff para IABANK
line-length = 88
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
    "__pycache__",
    ".env",
    ".venv",
    "venv",
    ".git",
    "__pypackages__",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C90",    # mccabe
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "DJ",     # flake8-django
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # numpy
    "PERF",   # perflint
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific
]
ignore = [
    # ANN101 e ANN102 foram removidos do ruff - não precisam mais ser ignorados
    "ANN001",  # missing-type-function-argument (será implementado gradualmente)
    "ANN201",  # missing-return-type-public-function (será implementado gradualmente)
    "ANN401",  # dynamically-typed-expressions
    "COM812",  # trailing-comma-missing (conflita com black)
    "ISC001",  # single-line-implicit-string-concatenation (conflita com black)
    "E501",    # line-too-long (deixa o black gerenciar)
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "S101",    # use-of-assert-detected (para testes)
    "S105",    # hardcoded-password-string (para development)
    "S311",    # suspicious-non-cryptographic-random-usage
    "TRY003",  # raise-vanilla-args
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "FBT001",  # boolean-type-hint-positional-argument
    "FBT002",  # boolean-default-value-positional-argument
    "ERA001",  # found-commented-out-code (para fase de desenvolvimento)
    "T201",    # print-found (para desenvolvimento/debug)
    "E402",    # module-level-import-not-at-top-of-file (para settings)
    "PTH103",  # os-makedirs (será corrigido gradualmente)
    "RUF005",  # collection-literal-concatenation (será corrigido gradualmente)
    "PLC0415", # import-outside-toplevel (para manage.py e configurações)
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = [
    "S101",    # assert
    "ARG",     # unused-arguments
    "FBT",     # flake8-boolean-trap
    "PLR2004", # magic-value-comparison
    "S311",    # suspicious-non-cryptographic-random-usage
]
"*/migrations/*" = ["ALL"]
"*/__init__.py" = ["F401"]
"*/settings/*" = ["F405", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["iabank"]
known-third-party = ["django", "rest_framework"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | migrations
)/
'''
force-exclude = '''
/(
    migrations
)/
'''

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = [
    "migrations/",
    "__pycache__/",
    "venv/",
    ".venv/",
]

# Django-specific settings
[tool.mypy-django]
django_settings_module = "iabank.settings.development"

# Django stubs
[[tool.mypy.overrides]]
module = [
    "django.*",
    "rest_framework.*",
    "celery.*",
    "redis.*",
    "factory.*",
    "faker.*",
    "structlog.*",
    "prometheus_client.*",
    "cryptography.*",
    "argon2.*",
    "simple_history.*",
    "cors_headers.*",
    "django_filters.*",
    "rest_framework_simplejwt.*",
    "decouple.*",
    "dotenv.*",
    "dateutil.*",
    "phonenumbers.*",
    "validate_docbr.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "iabank.settings.testing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-fail-under=85",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "contract: marks tests as contract tests",
    "tenant_isolation: marks tests that validate tenant isolation",
]